infrastructure/base/gateway/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-tls
spec:
  gatewayClassName: nginx-internal
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-internal
      protocol: HTTPS
      port: 443
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: secret-private-domain-tls
    - name: https-wildcard-internal
      protocol: HTTPS
      port: 443
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      # TODO: see if I should define TLS here
      tls:
        mode: Terminate
        certificateRefs:
          - name: secret-private-domain-tls
